fixed input alignment

--- a/client/views/settings/calendarSettings.less
+++ b/client/views/settings/calendarSettings.less
@@ -26,6 +26,7 @@ form.inline-hrs-mins > .form-group {
     display: inline-block;
     max-width: 110px;
     margin: 0;
+    vertical-align: initial;
   }
 
   > .input-group > .input-group-addon {
